--- a/src/pages/newUser/newuser.css
+++ b/src/pages/newUser/newuser.css
@@ -5,9 +5,12 @@
 .newUserForm{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 .newUserItem{
-    width: 400px;
+    width: 100%;
+    max-width: 350px;
     display: flex;
     flex-direction: column;
     margin: 10px 10px;
